# bag2vid

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml
bag2vid/: CMakeLists.txt  package.xml
bag2vid/include/bag2vid/: Types.hpp
bag2vid/include/bag2vid/backend/: Camera.hpp  Extractor.hpp  H264Decoder.hpp
bag2vid/include/bag2vid/frontend/: MainWindow.hpp  Timeline.hpp  VideoPlayer.hpp  Visualiser.hpp
bag2vid/nodes/: bag2vid_gui.cpp  bag2vid_node.cpp
bag2vid/scripts/: bag2vid.sh  install.sh
bag2vid/src/backend/: Extractor.cpp  H264Decoder.cpp
bag2vid/src/frontend/: MainWindow.cpp  VideoPlayer.cpp  Visualiser.cpp
